kadai3/xcc.output
State 98 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 @1: /* empty */

    6 function_definition: type_specifier declarator @1 compound_statement

    7 declaration_list: /* empty */
    8                 | declaration_list declaration

    9 declaration: type_specifier declarator ';'

   10 type_specifier: "void"
   11               | "char"
   12               | "int"

   13 declarator: identifier
   14           | '*' declarator
   15           | declarator '(' parameter_list ')'
   16           | declarator '(' ')'

   17 parameter_list: parameter_declaration
   18               | parameter_list ',' parameter_declaration

   19 parameter_declaration: type_specifier declarator

   20 statement_list: statement
   21               | statement_list statement

   22 statement: expression_opt ';'
   23          | compound_statement
   24          | "if" '(' expression ')' statement
   25          | "if" '(' expression ')' statement "else" statement
   26          | "while" '(' expression ')' statement
   27          | "goto" identifier ';'
   28          | identifier ':' statement
   29          | "return" expression_opt ';'

   30 @2: /* empty */

   31 @3: /* empty */

   32 compound_statement: '{' @2 declaration_list @3 statement_list '}'

   33 expression_opt: /* empty */
   34               | expression

   35 expression: identifier
   36           | INTEGER_CONSTANT
   37           | CHARACTER_CONSTANT
   38           | STRING
   39           | expression '=' expression
   40           | expression "||" expression
   41           | expression "&&" expression
   42           | expression "==" expression
   43           | expression '<' expression
   44           | expression '+' expression
   45           | expression '-' expression
   46           | expression '*' expression
   47           | expression '/' expression
   48           | unary_operator expression
   49           | identifier '(' argument_expression_list ')'
   50           | identifier '(' ')'
   51           | '(' expression ')'

   52 unary_operator: '&'
   53               | '*'
   54               | '+'
   55               | '-'
   56               | '!'

   57 argument_expression_list: expression
   58                         | argument_expression_list ',' expression

   59 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 56
'&' (38) 52
'(' (40) 15 16 24 25 26 49 50 51
')' (41) 15 16 24 25 26 49 50 51
'*' (42) 14 46 53
'+' (43) 44 54
',' (44) 18 58
'-' (45) 45 55
'/' (47) 47
':' (58) 28
';' (59) 9 22 27 29
'<' (60) 43
'=' (61) 39
'{' (123) 32
'}' (125) 32
error (256)
"char" (258) 11
"else" (259) 25
"goto" (260) 27
"if" (261) 24 25
"int" (262) 12
"return" (263) 29
"void" (264) 10
"while" (265) 26
"==" (266) 42
"&&" (267) 41
"||" (268) 40
IDENTIFIER (269) 59
STRING (270) 38
INTEGER_CONSTANT (271) 36
CHARACTER_CONSTANT (272) 37
UNARY_OP (273)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
translation_unit (35)
    on left: 1 2, on right: 0 2
external_declaration (36)
    on left: 3 4, on right: 1 2
function_definition (37)
    on left: 6, on right: 3
@1 (38)
    on left: 5, on right: 6
declaration_list (39)
    on left: 7 8, on right: 8 32
declaration (40)
    on left: 9, on right: 4 8
type_specifier (41)
    on left: 10 11 12, on right: 6 9 19
declarator (42)
    on left: 13 14 15 16, on right: 6 9 14 15 16 19
parameter_list (43)
    on left: 17 18, on right: 15 18
parameter_declaration (44)
    on left: 19, on right: 17 18
statement_list (45)
    on left: 20 21, on right: 21 32
statement (46)
    on left: 22 23 24 25 26 27 28 29, on right: 20 21 24 25 26 28
compound_statement (47)
    on left: 32, on right: 6 23
@2 (48)
    on left: 30, on right: 32
@3 (49)
    on left: 31, on right: 32
expression_opt (50)
    on left: 33 34, on right: 22 29
expression (51)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51,
    on right: 24 25 26 34 39 40 41 42 43 44 45 46 47 48 51 57 58
unary_operator (52)
    on left: 52 53 54 55 56, on right: 48
argument_expression_list (53)
    on left: 57 58, on right: 49 58
identifier (54)
    on left: 59, on right: 13 27 28 35 49 50


state 0

    0 $accept: . translation_unit $end

    "char"  shift, and go to state 1
    "int"   shift, and go to state 2
    "void"  shift, and go to state 3

    translation_unit      go to state 4
    external_declaration  go to state 5
    function_definition   go to state 6
    declaration           go to state 7
    type_specifier        go to state 8


state 1

   11 type_specifier: "char" .

    $default  reduce using rule 11 (type_specifier)


state 2

   12 type_specifier: "int" .

    $default  reduce using rule 12 (type_specifier)


state 3

   10 type_specifier: "void" .

    $default  reduce using rule 10 (type_specifier)


state 4

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end    shift, and go to state 9
    "char"  shift, and go to state 1
    "int"   shift, and go to state 2
    "void"  shift, and go to state 3

    external_declaration  go to state 10
    function_definition   go to state 6
    declaration           go to state 7
    type_specifier        go to state 8


state 5

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


state 6

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 7

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


state 8

    6 function_definition: type_specifier . declarator @1 compound_statement
    9 declaration: type_specifier . declarator ';'

    IDENTIFIER  shift, and go to state 11
    '*'         shift, and go to state 12

    declarator  go to state 13
    identifier  go to state 14


state 9

    0 $accept: translation_unit $end .

    $default  accept


state 10

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 11

   59 identifier: IDENTIFIER .

    $default  reduce using rule 59 (identifier)


state 12

   14 declarator: '*' . declarator

    IDENTIFIER  shift, and go to state 11
    '*'         shift, and go to state 12

    declarator  go to state 15
    identifier  go to state 14


state 13

    6 function_definition: type_specifier declarator . @1 compound_statement
    9 declaration: type_specifier declarator . ';'
   15 declarator: declarator . '(' parameter_list ')'
   16           | declarator . '(' ')'

    '('  shift, and go to state 16
    ';'  shift, and go to state 17

    $default  reduce using rule 5 (@1)

    @1  go to state 18


state 14

   13 declarator: identifier .

    $default  reduce using rule 13 (declarator)


state 15

   14 declarator: '*' declarator .
   15           | declarator . '(' parameter_list ')'
   16           | declarator . '(' ')'

    '('  shift, and go to state 16

    $default  reduce using rule 14 (declarator)


state 16

   15 declarator: declarator '(' . parameter_list ')'
   16           | declarator '(' . ')'

    "char"  shift, and go to state 1
    "int"   shift, and go to state 2
    "void"  shift, and go to state 3
    ')'     shift, and go to state 19

    type_specifier         go to state 20
    parameter_list         go to state 21
    parameter_declaration  go to state 22


state 17

    9 declaration: type_specifier declarator ';' .

    $default  reduce using rule 9 (declaration)


state 18

    6 function_definition: type_specifier declarator @1 . compound_statement

    '{'  shift, and go to state 23

    compound_statement  go to state 24


state 19

   16 declarator: declarator '(' ')' .

    $default  reduce using rule 16 (declarator)


state 20

   19 parameter_declaration: type_specifier . declarator

    IDENTIFIER  shift, and go to state 11
    '*'         shift, and go to state 12

    declarator  go to state 25
    identifier  go to state 14


state 21

   15 declarator: declarator '(' parameter_list . ')'
   18 parameter_list: parameter_list . ',' parameter_declaration

    ')'  shift, and go to state 26
    ','  shift, and go to state 27


state 22

   17 parameter_list: parameter_declaration .

    $default  reduce using rule 17 (parameter_list)


state 23

   32 compound_statement: '{' . @2 declaration_list @3 statement_list '}'

    $default  reduce using rule 30 (@2)

    @2  go to state 28


state 24

    6 function_definition: type_specifier declarator @1 compound_statement .

    $default  reduce using rule 6 (function_definition)


state 25

   15 declarator: declarator . '(' parameter_list ')'
   16           | declarator . '(' ')'
   19 parameter_declaration: type_specifier declarator .

    '('  shift, and go to state 16

    $default  reduce using rule 19 (parameter_declaration)


state 26

   15 declarator: declarator '(' parameter_list ')' .

    $default  reduce using rule 15 (declarator)


state 27

   18 parameter_list: parameter_list ',' . parameter_declaration

    "char"  shift, and go to state 1
    "int"   shift, and go to state 2
    "void"  shift, and go to state 3

    type_specifier         go to state 20
    parameter_declaration  go to state 29


state 28

   32 compound_statement: '{' @2 . declaration_list @3 statement_list '}'

    $default  reduce using rule 7 (declaration_list)

    declaration_list  go to state 30


state 29

   18 parameter_list: parameter_list ',' parameter_declaration .

    $default  reduce using rule 18 (parameter_list)


state 30

    8 declaration_list: declaration_list . declaration
   32 compound_statement: '{' @2 declaration_list . @3 statement_list '}'

    "char"  shift, and go to state 1
    "int"   shift, and go to state 2
    "void"  shift, and go to state 3

    $default  reduce using rule 31 (@3)

    declaration     go to state 31
    type_specifier  go to state 32
    @3              go to state 33


state 31

    8 declaration_list: declaration_list declaration .

    $default  reduce using rule 8 (declaration_list)


state 32

    9 declaration: type_specifier . declarator ';'

    IDENTIFIER  shift, and go to state 11
    '*'         shift, and go to state 12

    declarator  go to state 34
    identifier  go to state 14


state 33

   32 compound_statement: '{' @2 declaration_list @3 . statement_list '}'

    "goto"              shift, and go to state 35
    "if"                shift, and go to state 36
    "return"            shift, and go to state 37
    "while"             shift, and go to state 38
    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '{'                 shift, and go to state 23
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    $default  reduce using rule 33 (expression_opt)

    statement_list      go to state 48
    statement           go to state 49
    compound_statement  go to state 50
    expression_opt      go to state 51
    expression          go to state 52
    unary_operator      go to state 53
    identifier          go to state 54


state 34

    9 declaration: type_specifier declarator . ';'
   15 declarator: declarator . '(' parameter_list ')'
   16           | declarator . '(' ')'

    '('  shift, and go to state 16
    ';'  shift, and go to state 17


state 35

   27 statement: "goto" . identifier ';'

    IDENTIFIER  shift, and go to state 11

    identifier  go to state 55


state 36

   24 statement: "if" . '(' expression ')' statement
   25          | "if" . '(' expression ')' statement "else" statement

    '('  shift, and go to state 56


state 37

   29 statement: "return" . expression_opt ';'

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    $default  reduce using rule 33 (expression_opt)

    expression_opt  go to state 57
    expression      go to state 52
    unary_operator  go to state 53
    identifier      go to state 58


state 38

   26 statement: "while" . '(' expression ')' statement

    '('  shift, and go to state 59


state 39

   38 expression: STRING .

    $default  reduce using rule 38 (expression)


state 40

   36 expression: INTEGER_CONSTANT .

    $default  reduce using rule 36 (expression)


state 41

   37 expression: CHARACTER_CONSTANT .

    $default  reduce using rule 37 (expression)


state 42

   54 unary_operator: '+' .

    $default  reduce using rule 54 (unary_operator)


state 43

   55 unary_operator: '-' .

    $default  reduce using rule 55 (unary_operator)


state 44

   53 unary_operator: '*' .

    $default  reduce using rule 53 (unary_operator)


state 45

   51 expression: '(' . expression ')'

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 60
    unary_operator  go to state 53
    identifier      go to state 58


state 46

   52 unary_operator: '&' .

    $default  reduce using rule 52 (unary_operator)


state 47

   56 unary_operator: '!' .

    $default  reduce using rule 56 (unary_operator)


state 48

   21 statement_list: statement_list . statement
   32 compound_statement: '{' @2 declaration_list @3 statement_list . '}'

    "goto"              shift, and go to state 35
    "if"                shift, and go to state 36
    "return"            shift, and go to state 37
    "while"             shift, and go to state 38
    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '{'                 shift, and go to state 23
    '}'                 shift, and go to state 61
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    $default  reduce using rule 33 (expression_opt)

    statement           go to state 62
    compound_statement  go to state 50
    expression_opt      go to state 51
    expression          go to state 52
    unary_operator      go to state 53
    identifier          go to state 54


state 49

   20 statement_list: statement .

    $default  reduce using rule 20 (statement_list)


state 50

   23 statement: compound_statement .

    $default  reduce using rule 23 (statement)


state 51

   22 statement: expression_opt . ';'

    ';'  shift, and go to state 63


state 52

   34 expression_opt: expression .
   39 expression: expression . '=' expression
   40           | expression . "||" expression
   41           | expression . "&&" expression
   42           | expression . "==" expression
   43           | expression . '<' expression
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression

    "=="  shift, and go to state 64
    "&&"  shift, and go to state 65
    "||"  shift, and go to state 66
    '='   shift, and go to state 67
    '<'   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72

    $default  reduce using rule 34 (expression_opt)


state 53

   48 expression: unary_operator . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 73
    unary_operator  go to state 53
    identifier      go to state 58


state 54

   28 statement: identifier . ':' statement
   35 expression: identifier .
   49           | identifier . '(' argument_expression_list ')'
   50           | identifier . '(' ')'

    '('  shift, and go to state 74
    ':'  shift, and go to state 75

    $default  reduce using rule 35 (expression)


state 55

   27 statement: "goto" identifier . ';'

    ';'  shift, and go to state 76


state 56

   24 statement: "if" '(' . expression ')' statement
   25          | "if" '(' . expression ')' statement "else" statement

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 77
    unary_operator  go to state 53
    identifier      go to state 58


state 57

   29 statement: "return" expression_opt . ';'

    ';'  shift, and go to state 78


state 58

   35 expression: identifier .
   49           | identifier . '(' argument_expression_list ')'
   50           | identifier . '(' ')'

    '('  shift, and go to state 74

    $default  reduce using rule 35 (expression)


state 59

   26 statement: "while" '(' . expression ')' statement

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 79
    unary_operator  go to state 53
    identifier      go to state 58


state 60

   39 expression: expression . '=' expression
   40           | expression . "||" expression
   41           | expression . "&&" expression
   42           | expression . "==" expression
   43           | expression . '<' expression
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | '(' expression . ')'

    "=="  shift, and go to state 64
    "&&"  shift, and go to state 65
    "||"  shift, and go to state 66
    '='   shift, and go to state 67
    '<'   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    ')'   shift, and go to state 80


state 61

   32 compound_statement: '{' @2 declaration_list @3 statement_list '}' .

    $default  reduce using rule 32 (compound_statement)


state 62

   21 statement_list: statement_list statement .

    $default  reduce using rule 21 (statement_list)


state 63

   22 statement: expression_opt ';' .

    $default  reduce using rule 22 (statement)


state 64

   42 expression: expression "==" . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 81
    unary_operator  go to state 53
    identifier      go to state 58


state 65

   41 expression: expression "&&" . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 82
    unary_operator  go to state 53
    identifier      go to state 58


state 66

   40 expression: expression "||" . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 83
    unary_operator  go to state 53
    identifier      go to state 58


state 67

   39 expression: expression '=' . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 84
    unary_operator  go to state 53
    identifier      go to state 58


state 68

   43 expression: expression '<' . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 85
    unary_operator  go to state 53
    identifier      go to state 58


state 69

   44 expression: expression '+' . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 86
    unary_operator  go to state 53
    identifier      go to state 58


state 70

   45 expression: expression '-' . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 87
    unary_operator  go to state 53
    identifier      go to state 58


state 71

   46 expression: expression '*' . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 88
    unary_operator  go to state 53
    identifier      go to state 58


state 72

   47 expression: expression '/' . expression

    IDENTIFIER          shift, and go to state 11
    STRING              shift, and go to state 39
    INTEGER_CONSTANT    shift, and go to state 40
    CHARACTER_CONSTANT  shift, and go to state 41
    '+'                 shift, and go to state 42
    '-'                 shift, and go to state 43
    '*'                 shift, and go to state 44
    '('                 shift, and go to state 45
    '&'                 shift, and go to state 46
    '!'                 shift, and go to state 47

    expression      go to state 89
    unary_operator  go to state 53
    identifier      go to state 58


state 73
